#[macro_use]
extern crate lazy_stat c;
extern crate core;

use serde_json::Value;
use tok o::sync::oneshot::Sender;
use tok o::t  :: nstant;
use std::ops::Deref;
use  ertools:: ertools;
use crate::bootstrap::Tensor nput;
use crate::pred ct_serv ce::Model;
use crate::tf_proto::{DataType, TensorProto};

pub mod batch;
pub mod bootstrap;
pub mod cl _args;
pub mod  tr cs;
pub mod onnx_model;
pub mod pred ct_serv ce;
pub mod tf_model;
pub mod torch_model;
pub mod cores {
    pub mod val dator;
}

pub mod tf_proto {
    ton c:: nclude_proto!("tensorflow");
    pub mod tensorflow_serv ng {
        ton c:: nclude_proto!("tensorflow.serv ng");
    }
}

pub mod kf_serv ng {
    ton c:: nclude_proto!(" nference");
}
#[cfg(test)]
mod tests {
    use crate::cl _args::Args;
    #[test]
    fn test_vers on_str ng_to_epoch() {
        assert_eq!(
            Args::vers on_str_to_epoch("2022-12-20T10:18:53.000Z").unwrap_or(-1),
            1671531533000
        );
        assert_eq!(Args::vers on_str_to_epoch("1203444").unwrap_or(-1), 1203444);
    }
}

mod ut ls {
    use crate::cl _args::{ARGS, MODEL_SPECS};
    use anyhow::Result;
    use log:: nfo;
    use serde_json::Value;

    pub fn read_conf g( ta_f le: &Str ng) -> Result<Value> {
        let json = std::fs::read_to_str ng( ta_f le)?;
        let v: Value = serde_json::from_str(&json)?;
        Ok(v)
    }
    pub fn get_conf g_or_else<F>(model_conf g: &Value, key: &str, default: F) -> Str ng
    w re
        F: FnOnce() -> Str ng,
    {
        match model_conf g[key] {
            Value::Str ng(ref v) => {
                 nfo!("from model_conf g: {}={}", key, v);
                v.to_str ng()
            }
            Value::Number(ref num) => {
                 nfo!(
                    "from model_conf g: {}={} (turn number  nto a str ng)",
                    key, num
                );
                num.to_str ng()
            }
            _ => {
                let d = default();
                 nfo!("from default: {}={}", key, d);
                d
            }
        }
    }
    pub fn get_conf g_or(model_conf g: &Value, key: &str, default: &str) -> Str ng {
        get_conf g_or_else(model_conf g, key, || default.to_str ng())
    }
    pub fn get_ ta_d r() -> &'stat c str {
        ARGS. ta_json_d r
            .as_ref()
            .map(|s| s.as_str())
            .unwrap_or_else(|| {
                let model_d r = &ARGS.model_d r[0];
                let  ta_d r = &model_d r[0..model_d r.rf nd(&MODEL_SPECS[0]).unwrap()];
                 nfo!(
                    "no  ta_json_d r spec f ed,  nce der ve from f rst model d r:{}->{}",
                    model_d r,  ta_d r
                );
                 ta_d r
            })
    }
}

pub type Ser al zed nput = Vec<u8>;
pub const VERS ON: &str = env!("CARGO_PKG_VERS ON");
pub const NAME: &str = env!("CARGO_PKG_NAME");
pub type ModelFactory<T> = fn(us ze, Str ng, &Value) -> anyhow::Result<T>;
pub const MAX_NUM_MODELS: us ze = 16;
pub const MAX_NUM_OUTPUTS: us ze = 30;
pub const MAX_NUM_ NPUTS: us ze = 120;
pub const META_ NFO: &str = "META.json";

//use a  ap allocated gener c type  re so that both
//Tensorflow & Pytorch  mple ntat on can return t  r Tensor wrapped  n a Box
//w hout an extra  mcopy to Vec
pub type TensorReturn<T> = Box<dyn Deref<Target = [T]>>;

//returned tensor may be  nt64  .e., a l st of relevant ad  ds
pub enum TensorReturnEnum {
    FloatTensorReturn(TensorReturn<f32>),
    Str ngTensorReturn(TensorReturn<Str ng>),
     nt64TensorReturn(TensorReturn< 64>),
     nt32TensorReturn(TensorReturn< 32>),
}

 mpl TensorReturnEnum {
    #[ nl ne(always)]
    pub fn sl ce(&self, start: us ze, end: us ze) -> TensorScores {
        match self {
            TensorReturnEnum::FloatTensorReturn(f32_return) => {
                TensorScores::Float32TensorScores(f32_return[start..end].to_vec())
            }
            TensorReturnEnum:: nt64TensorReturn( 64_return) => {
                TensorScores:: nt64TensorScores( 64_return[start..end].to_vec())
            }
            TensorReturnEnum:: nt32TensorReturn( 32_return) => {
                TensorScores:: nt32TensorScores( 32_return[start..end].to_vec())
            }
            TensorReturnEnum::Str ngTensorReturn(str_return) => {
                TensorScores::Str ngTensorScores(str_return[start..end].to_vec())
            }
        }
    }
}

#[der ve(Debug)]
pub enum Pred ctResult {
    Ok(Vec<TensorScores>,  64),
    DropDueToOverload,
    ModelNotFound(us ze),
    ModelNotReady(us ze),
    ModelVers onNotFound(us ze,  64),
}

#[der ve(Debug)]
pub enum TensorScores {
    Float32TensorScores(Vec<f32>),
     nt64TensorScores(Vec< 64>),
     nt32TensorScores(Vec< 32>),
    Str ngTensorScores(Vec<Str ng>),
}

 mpl TensorScores {
    pub fn create_tensor_proto(self) -> TensorProto {
        match self {
            TensorScores::Float32TensorScores(f32_tensor) => TensorProto {
                dtype: DataType::DtFloat as  32,
                float_val: f32_tensor,
                ..Default::default()
            },
            TensorScores:: nt64TensorScores( 64_tensor) => TensorProto {
                dtype: DataType::Dt nt64 as  32,
                 nt64_val:  64_tensor,
                ..Default::default()
            },
            TensorScores:: nt32TensorScores( 32_tensor) => TensorProto {
                dtype: DataType::Dt nt32 as  32,
                 nt_val:  32_tensor,
                ..Default::default()
            },
            TensorScores::Str ngTensorScores(str_tensor) => TensorProto {
                dtype: DataType::DtStr ng as  32,
                str ng_val: str_tensor. nto_ er().map(|s| s. nto_bytes()).collect_vec(),
                ..Default::default()
            },
        }
    }
    pub fn len(&self) -> us ze {
        match &self {
            TensorScores::Float32TensorScores(t) => t.len(),
            TensorScores:: nt64TensorScores(t) => t.len(),
            TensorScores:: nt32TensorScores(t) => t.len(),
            TensorScores::Str ngTensorScores(t) => t.len(),
        }
    }
}

#[der ve(Debug)]
pub enum Pred ct ssage<T: Model> {
    Pred ct(
        us ze,
        Opt on< 64>,
        Vec<Tensor nput>,
        Sender<Pred ctResult>,
         nstant,
    ),
    UpsertModel(T),
    /*
    #[allow(dead_code)]
    DeleteModel(us ze),
     */
}

#[der ve(Debug)]
pub struct Callback(Sender<Pred ctResult>, us ze);

pub const MAX_VERS ONS_PER_MODEL: us ze = 2;
